--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ div#notebook {
 <h2 id="What-is-this-workshop">What is this workshop<a class="anchor-link" href="#What-is-this-workshop">&#182;</a></h2><ul>
 <li>The only real unifying theme of this talk is that it's going to be features of python that I (Simon) like or think are cool / interesting / useful about python that go beyond the basics.</li>
 <li><a href="http://afabbro.github.io/jsconf2013/">Not a beginner, not an expert</a>, <a href="https://www.youtube.com/watch?v=v0TFmdO4ZP0">video</a> - good talk on being an intermediate programmer</li>
-<li>Code / presentation is at <a href="https://github.com/simzou/python-workshop">https://github.com/simzou/python-workshop</a></li>
+<li>Code / presentation is at <a href="https://github.com/simzou/python-workshop">https://github.com/simzou/python-workshop</a>, <a href="simzou.github.io/python-workshop">web page</a>, <a href="https://github.com/simzou/python-workshop/blob/master/workshop.md">alternative</a></li>
 <li>This is a jupyter notebook, if you have it installed you can run the code in this talk by double clicking a code cell and hitting shift+enter. If you don't, don't worry about it, will talk about it later.</li>
 </ul>
 <h1 id="Motivation">Motivation<a class="anchor-link" href="#Motivation">&#182;</a></h1><ul>
