--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ div#notebook {
 <li><a href="http://simzou.github.io/python-workshop/slides.html">slides</a> - <a href="http://simzou.github.io/python-workshop/slides.html">http://simzou.github.io/python-workshop/slides.html</a></li>
 </ul>
 </li>
-<li>This is a jupyter notebook, if you have it installed you can run the code in this talk by double clicking a code cell and hitting shift+enter. If you don't, don't worry about it, will talk about it later.</li>
+<li>Slides were made using a jupyter notebook, more info about them later</li>
 </ul>
 
 </div>
