--- a/index.html
+++ b/index.html
@@ -935,6 +935,15 @@ Hi my na
 <ul>
 <li>So <code>combos</code> is clearly an iterable, but the type is not that of a collection (data structure that holds stuff); it is a <strong>generator</strong></li>
 </ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Generators-and-the-yield-keyword">Generators and the <code>yield</code> keyword<a class="anchor-link" href="#Generators-and-the-yield-keyword">&#182;</a></h2>
 </div>
 </div>
