--- a/index.html
+++ b/index.html
@@ -196,8 +196,6 @@ div#notebook {
 <li>External Libaries</li>
 <li>The python toolkit<ul>
 <li>pip, virtualenv, anaconda</li>
-<li>virtualenv</li>
-<li>anaconda</li>
 </ul>
 </li>
 <li>Community / Drama / Resources<ul>
@@ -909,7 +907,7 @@ Hi my na
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>&lt;itertools.combinations object at 0x1049bc208&gt;
+<pre>&lt;itertools.combinations object at 0x104ac0208&gt;
 </pre>
 </div>
 </div>
@@ -994,7 +992,7 @@ Hi my na
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>r: 1
-y: &lt;generator object count_using_yield at 0x1049a1690&gt;
+y: &lt;generator object count_using_yield at 0x104aa2640&gt;
 </pre>
 </div>
 </div>
@@ -1291,11 +1289,11 @@ y: &lt;generator object count_using_yield at 0x1049a1690&gt;
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>6
+<pre>2
 4
-9
 6
-1
+7
+2
 </pre>
 </div>
 </div>
@@ -1324,7 +1322,7 @@ y: &lt;generator object count_using_yield at 0x1049a1690&gt;
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[8, 5, 0, 6, 4]</pre>
+<pre>[5, 6, 0, 4, 7]</pre>
 </div>
 
 </div>
@@ -1344,7 +1342,7 @@ y: &lt;generator object count_using_yield at 0x1049a1690&gt;
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[32]:</div>
+<div class="prompt input_prompt">In&nbsp;[31]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">collections</span> <span class="kn">import</span> <span class="n">defaultdict</span>
@@ -1386,7 +1384,7 @@ y: &lt;generator object count_using_yield at 0x1049a1690&gt;
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[31]:</div>
+<div class="prompt input_prompt">In&nbsp;[32]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">pdb</span>
@@ -1408,7 +1406,7 @@ y: &lt;generator object count_using_yield at 0x1049a1690&gt;
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>--Return--
-&gt; &lt;ipython-input-31-81639141f23c&gt;(5)&lt;module&gt;()-&gt;None
+&gt; &lt;ipython-input-32-81639141f23c&gt;(5)&lt;module&gt;()-&gt;None
 -&gt; pdb.set_trace()
 (Pdb) x
 4
@@ -1424,7 +1422,7 @@ y: &lt;generator object count_using_yield at 0x1049a1690&gt;
 <pre>
 <span class="ansired">---------------------------------------------------------------------------</span>
 <span class="ansired">BdbQuit</span>                                   Traceback (most recent call last)
-<span class="ansigreen">&lt;ipython-input-31-81639141f23c&gt;</span> in <span class="ansicyan">&lt;module&gt;</span><span class="ansiblue">()</span>
+<span class="ansigreen">&lt;ipython-input-32-81639141f23c&gt;</span> in <span class="ansicyan">&lt;module&gt;</span><span class="ansiblue">()</span>
 <span class="ansigreen">      3</span> x <span class="ansiblue">=</span> <span class="ansicyan">4</span><span class="ansiblue"></span>
 <span class="ansigreen">      4</span> y <span class="ansiblue">=</span> <span class="ansicyan">5</span><span class="ansiblue"></span>
 <span class="ansigreen">----&gt; 5</span><span class="ansired"> </span>pdb<span class="ansiblue">.</span>set_trace<span class="ansiblue">(</span><span class="ansiblue">)</span><span class="ansiblue"></span>
